# Practice-in-Skypro

./: .flake8  .gitignore  main.py  pyproject.toml  readme.md
data/: operation3.json  operations1.json  operations4.json  transactions_excel_0.xlsx  transactions_excel_1.xlsx
logs/: logging.txt
src/: .external_api.py  .masks.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  the_executive_module.py  utils.py  widget.py  work_with_csv_xlsx.py
tests/: .test_utils.py  __init__.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_the_executive_module.py  test_utils.py  test_widget.py  test_work_with_csv_xlsx.py
